legacy/k8s/torrents/client.yaml
#---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: torrents
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: torrents
  name: torrents
  namespace: torrents
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: torrents

  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ./torrent-docker-compose.yaml convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: torrents
    spec:
      containers:
        - env:
            - name: OPENVPN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: vpn
                  key: pass
            - name: OPENVPN_USER
              valueFrom:
                secretKeyRef:
                  name: vpn
                  key: user
            - name: PORT_FORWARD_ONLY
              value: "on"
            - name: SERVER_COUNTRIES
              value:
            - name: VPN_SERVICE_PROVIDER
              value:
          image: qmcgaw/gluetun:latest
          name: vpn
          ports:
            - containerPort: 9091
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c", "(ip rule del table 51820; ip -6 rule del table 51820) || true" ]
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value:
          image: linuxserver/qbittorrent:latest
          name: qbittorrent
          volumeMounts:
            - mountPath: /config
              name: pvc-storage
              subPath: qbittorrent/
            - mountPath: /downloads
              name: pvc-storage
              subPath: downloads/
      volumes:
        - name: pvc-storage
          persistentVolumeClaim:
            claimName: pvc-nas
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ./torrent-docker-compose.yaml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: torrents
  name: torrents
  namespace: torrents
spec:
  ports:
    - name: "qbittorrent"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: torrents
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: torrents
  namespace: torrents
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: letsencrypt
  routes:
    - kind: Rule
      match: Host(`torrent.local.dev`)
      services:
        - name: torrents
          port: 8080
